--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.55.3",
     "react-native-track-player": "^0.2.4",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
