--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.1",
     "react-native": "0.55.3",
     "react-native-track-player": "^0.2.4",
+    "react-native-vector-icons": "^4.6.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
